--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -34,8 +34,8 @@ a#btn-logout { display: none; }
 <div class="well">
 	<h1>Welcome to the chat demo</h1>
 	
-	<a href="/" class="btn">Home</a>
-	<a href="/chat.html" target="_blank" onclick="return open_chat_window()" class="btn btn-success">Open a new chat window</a>
+	<a href="/" class="btn btn-large">Home</a>
+	<a href="/chat.html" target="_blank" onclick="return open_chat_window()" class="btn btn-large btn-success">Open a new chat window</a>
 </div>
 
 </body>
